# ZephyrOpsPlaybook

./: .gitignore  CMakeLists.txt  Kconfig  README.md  README_addon.md  README_win.md  prj.conf  west.yml
boards/: CMakeLists.txt  bbc_microbit.overlay  nucleo_f030r8.overlay  nucleo_f401re.overlay  nucleo_g431kb.overlay  nucleo_l552ze_q.overlay  rpi_pico.overlay  stm32h747i_disco_stm32h747xx_m7.overlay
boards/bbc/microbit/: bbc_microbit.c  prj.conf
boards/bbc/microbit_v2/: bbc_microbit_v2.c  prj.conf
boards/generic/: CMakeLists.txt  generic_board.c  prj.conf
boards/raspberrypi/rpi_pico/: CMakeLists.txt  prj.conf  rpi_pico.c
boards/raspberrypi/rpi_pico2/: CMakeLists.txt  rpi_pico2.c
boards/st/: nucleo_f401re.c
boards/st/nucleo_f030r8/: CMakeLists.txt  nucleo_f030r8.c  prj.conf
boards/st/nucleo_f401re/: nucleo_f401re.c  prj.conf
boards/st/nucleo_g431kb/: CMakeLists.txt  nucleo_g431kb.c  prj.conf
boards/st/nucleo_l552ze_q/: CMakeLists.txt  nucleo_l552ze_q.c
boards/st/stm32h747i_disco/: CMakeLists.txt  prj.conf  stm32h747i_disco_m7.c
core/: main.c
docs/: README_addon.md  README_lnx.md  README_win.md
drivers/: CMakeLists.txt  Kconfig
drivers/button/: CMakeLists.txt  drv_button_generic.c
drivers/display/: CMakeLists.txt
drivers/gpio/: CMakeLists.txt  drv_gpio_common.c
drivers/i2c/: CMakeLists.txt  drv_i2c_common.c
drivers/pwm/: CMakeLists.txt
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/accel/: CMakeLists.txt  drv_accel_lis2dh.c
drivers/sensor/magnet/: CMakeLists.txt  drv_magn_lis2mdl.c
drivers/sensor/measure/: CMakeLists.txt  drv_tof_sequence.c  drv_tof_vl53l4cd.c
drivers/serial/: CMakeLists.txt  drv_uart_common.c
drivers/spi/: CMakeLists.txt
flow/: CMakeLists.txt  seq_sensor_manager.c  seq_sensor_measure.c
global/: gbf_sensor_database.c
include/boards/: unique.h
include/boards/bbc/microbit/: bbc_microbit.h
include/boards/bbc/microbit_v2/: bbc_microbit_v2.h
include/boards/generic/: generic_board.h
include/boards/raspberrypi/rpi_pico/: rpi_pico.h
include/boards/raspberrypi/rpi_pico2/: rpi_pico2.h
include/boards/st/: nucleo_f401re.h
include/boards/st/nucleo_f030r8/: nucleo_f030r8.h
include/boards/st/nucleo_f401re/: nucleo_f401re.h
include/boards/st/nucleo_g431kb/: nucleo_g431kb.h
include/boards/st/nucleo_l552ze_q/: nucleo_l552ze_q.h
include/boards/st/stm32h747i_disco/: stm32h747i_disco_m7.h
include/drivers/beep/: drv_beep_manipulator.h
include/drivers/ble/: drv_ble_peripheral.h
include/drivers/ble/services/: drv_ble_battery.h  drv_ble_heartrate.h
include/drivers/button/: drv_button_generic.h  drv_button_nucleo.h
include/drivers/display/: drv_disp_microbit.h
include/drivers/gpio/: drv_gpio_common.h
include/drivers/i2c/: drv_i2c_common.h
include/drivers/sensor/accel/: drv_accel_lis2dh.h
include/drivers/sensor/magnet/: drv_magn_lis2mdl.h
include/drivers/sensor/measure/: drv_tof_sequence.h  drv_tof_vl53l4cd.h  vl53l4cd_api.h
include/drivers/serial/: drv_uart_common.h
include/flow/: seq_sensor_manager.h  seq_sensor_measure.h
include/global/: gbf_sample_database.h  gbf_sensor_database.h
include/modules/: cmd_uart_format.h  com_uart_host.h
include/utils/: generic.h
include/utils/shell/: shl_log_operator.h
modules/: CMakeLists.txt  com_uart_host.c
scripts/: opt_gen.py  setup.bat  setup.py  setup.sh
scripts/dos/: build.bat  debug.bat  os_dep.py  stop.bat
scripts/linux/: build.sh  debug.sh  os_dep.py  stop.sh
scripts/support/: runner.json  runner.py
src/: CMakeLists.txt  main.c  osc_tokyo_bmp.c
utils/: CMakeLists.txt  generic.c
utils/shell/: shl_exec_drivers.c
